--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "drupal/core-composer-scaffold": "^9.0",
         "drupal/core-project-message": "^9.0",
         "drupal/core-vendor-hardening": "^9.0",
+        "drupal/ctools": "3.9.0 as 3.10.0",
         "drupal/editor_advanced_link": "^1.8",
         "drupal/entity_clone": "^1.0-beta4",
         "drupal/entity_usage": "^2.0-beta3",
@@ -67,7 +68,7 @@
         "drupal/noreferrer": "^1.0",
         "drupal/paragraphs": "^1.0",
         "drupal/paragraphs_asymmetric_translation_widgets": "^1.0@beta",
-        "drupal/pathauto": "^1.0",
+        "drupal/pathauto": "1.9.0 as 1.10.0",
         "drupal/profile": "^1.3",
         "drupal/promote_disable": "^2.0",
         "drupal/redirect": "^1.0",
