--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
+    - field.field.node.article.field_article_image
     - field.field.node.article.field_article_months
+    - field.field.node.article.field_article_related
     - field.field.node.article.field_article_type
     - field.field.node.article.field_class
     - field.field.node.article.field_colophon
@@ -17,7 +19,6 @@ dependencies:
     - field.field.node.article.field_description
     - field.field.node.article.field_equipment
     - field.field.node.article.field_factboxes
-    - field.field.node.article.field_files
     - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
@@ -28,10 +29,6 @@ dependencies:
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
     - field.field.node.article.field_time
-    - field.field.node.article.lat
-    - field.field.node.article.layout_builder__layout
-    - field.field.node.article.lon
-    - field.field.node.article.sis_map_address_dawa
     - node.type.article
   module:
     - datetime
@@ -93,7 +90,9 @@ content:
 hidden:
   body: true
   content_hierarchy: true
+  field_article_image: true
   field_article_months: true
+  field_article_related: true
   field_class: true
   field_colophon: true
   field_colophon_author: true
@@ -101,7 +100,6 @@ hidden:
   field_colophon_photographer: true
   field_equipment: true
   field_factboxes: true
-  field_files: true
   field_graphics: true
   field_header: true
   field_location: true
@@ -111,9 +109,5 @@ hidden:
   field_teaching_goals: true
   field_time: true
   langcode: true
-  lat: true
-  layout_builder__layout: true
   links: true
-  lon: true
   search_api_excerpt: true
-  sis_map_address_dawa: true
