--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.news.field_header
     - field.field.node.news.field_hide_breadcrumb
     - field.field.node.news.field_hide_title
+    - field.field.node.news.field_list_date
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
@@ -19,6 +20,7 @@ dependencies:
   module:
     - content_hierarchy
     - content_moderation
+    - datetime
     - field_group
     - media_library
     - metatag
@@ -105,6 +107,7 @@ third_party_settings:
         required_fields: true
     group_lists:
       children:
+        - field_list_date
         - field_description
         - field_list_media
       label: Listevisning
@@ -150,7 +153,7 @@ content:
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 21
+    weight: 28
     region: content
     settings:
       rows: 3
@@ -182,9 +185,15 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+  field_list_date:
+    type: datetime_default
+    weight: 27
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_list_media:
     type: media_library_widget
-    weight: 22
+    weight: 29
     region: content
     settings:
       media_types: {  }
