--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -6,7 +6,9 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
+    - field.field.node.article.field_article_image
     - field.field.node.article.field_article_months
+    - field.field.node.article.field_article_related
     - field.field.node.article.field_article_type
     - field.field.node.article.field_class
     - field.field.node.article.field_colophon
@@ -28,7 +30,6 @@ dependencies:
     - field.field.node.article.field_teaching_goals
     - field.field.node.article.field_time
     - field.field.node.article.lat
-    - field.field.node.article.layout_builder__layout
     - field.field.node.article.lon
     - field.field.node.article.sis_map_address_dawa
     - node.type.article
@@ -46,8 +47,8 @@ third_party_settings:
     allowed_block_categories: {  }
     entity_view_mode_restriction:
       allowed_layouts: {  }
-      denylisted_blocks: {  }
-      allowlisted_blocks: {  }
+      blacklisted_blocks: {  }
+      whitelisted_blocks: {  }
       restricted_categories: {  }
 _core:
   default_config_hash: MPH0xWosBjCbxPv7RhMaPznJBnPAJT06vK8GDR7H2AE
@@ -76,25 +77,21 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
-  field_files:
-    type: file_default
+  field_article_image:
+    type: entity_reference_entity_view
     label: above
     settings:
-      use_description_as_link_text: true
-    third_party_settings: {  }
-    weight: 3
-    region: content
-  field_time:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
+      view_mode: default
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
 hidden:
   content_hierarchy: true
+  content_moderation_control: true
   field_article_categories: true
+  field_article_months: true
+  field_article_related: true
   field_article_type: true
   field_class: true
   field_colophon: true
@@ -104,6 +101,7 @@ hidden:
   field_description: true
   field_equipment: true
   field_factboxes: true
+  field_files: true
   field_graphics: true
   field_header: true
   field_list_date: true
@@ -115,7 +113,6 @@ hidden:
   field_teaching_goals: true
   langcode: true
   lat: true
-  layout_builder__layout: true
   links: true
   lon: true
   search_api_excerpt: true
