--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
+    - field.field.node.article.field_article_image
     - field.field.node.article.field_article_months
+    - field.field.node.article.field_article_related
     - field.field.node.article.field_article_type
     - field.field.node.article.field_class
     - field.field.node.article.field_colophon
@@ -17,7 +19,6 @@ dependencies:
     - field.field.node.article.field_description
     - field.field.node.article.field_equipment
     - field.field.node.article.field_factboxes
-    - field.field.node.article.field_files
     - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
@@ -28,68 +29,17 @@ dependencies:
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
     - field.field.node.article.field_time
-    - field.field.node.article.lat
-    - field.field.node.article.layout_builder__layout
-    - field.field.node.article.lon
-    - field.field.node.article.sis_map_address_dawa
     - node.type.article
   module:
     - entity_reference_revisions
     - layout_builder
     - layout_builder_restrictions
-    - layout_discovery
     - text
     - user
 third_party_settings:
   layout_builder:
-    enabled: true
-    allow_custom: true
-    sections:
-      -
-        layout_id: layout_onecol
-        layout_settings:
-          label: ''
-          column_widths: null
-          color_theme: none
-          column_spacing_top: medium
-          column_spacing_bottom: medium
-          column_show_graphic_top: medium
-          column_show_graphic_bottom: medium
-          column_width: normal
-        components:
-          b65f8f78-3e30-4da5-bdad-2224e1247302:
-            uuid: b65f8f78-3e30-4da5-bdad-2224e1247302
-            region: content
-            configuration:
-              id: 'field_block:node:article:field_header'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: entity_reference_revisions_entity_view
-                label: hidden
-                settings:
-                  view_mode: default
-                  link: ''
-                third_party_settings: {  }
-            weight: 0
-            additional: {  }
-          5d5c585f-f756-42eb-8e23-8f6fd9352db0:
-            uuid: 5d5c585f-f756-42eb-8e23-8f6fd9352db0
-            region: content
-            configuration:
-              id: 'field_block:node:article:body'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: text_default
-                label: above
-                settings: {  }
-                third_party_settings: {  }
-            weight: 2
-            additional: {  }
-        third_party_settings: {  }
+    enabled: false
+    allow_custom: false
   layout_builder_restrictions:
     allowed_block_categories:
       - 'Chaos Tools'
@@ -111,12 +61,12 @@ third_party_settings:
         - layout_onecol
         - layout_twocol_section
         - layout_threecol_section
-      denylisted_blocks:
+      blacklisted_blocks:
         'Custom block types':
           - basic
         'Inline blocks':
           - 'inline_block:basic'
-      allowlisted_blocks:
+      whitelisted_blocks:
         'Chaos Tools': {  }
         'Content fields': {  }
         Forms: {  }
@@ -139,20 +89,17 @@ mode: full
 content:
   body:
     type: text_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 2
     region: content
-  content_moderation_control:
-    settings: {  }
-    third_party_settings: {  }
-    weight: -20
-    region: content
-  field_description:
-    type: basic_string
-    label: above
-    settings: {  }
+  field_article_image:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: full_width_16_9
+      link: false
     third_party_settings: {  }
     weight: 1
     region: content
@@ -167,17 +114,19 @@ content:
     region: content
 hidden:
   content_hierarchy: true
+  content_moderation_control: true
   field_article_categories: true
   field_article_months: true
+  field_article_related: true
   field_article_type: true
   field_class: true
   field_colophon: true
   field_colophon_author: true
   field_colophon_editor: true
   field_colophon_photographer: true
+  field_description: true
   field_equipment: true
   field_factboxes: true
-  field_files: true
   field_graphics: true
   field_list_date: true
   field_list_media: true
@@ -188,9 +137,6 @@ hidden:
   field_teaching_goals: true
   field_time: true
   langcode: true
-  lat: true
   layout_builder__layout: true
   links: true
-  lon: true
   search_api_excerpt: true
-  sis_map_address_dawa: true
