--- a/config/sync/core.entity_view_display.node.article.list.yml
+++ b/config/sync/core.entity_view_display.node.article.list.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
+    - field.field.node.article.field_article_image
     - field.field.node.article.field_article_months
+    - field.field.node.article.field_article_related
     - field.field.node.article.field_article_type
     - field.field.node.article.field_class
     - field.field.node.article.field_colophon
@@ -17,7 +19,6 @@ dependencies:
     - field.field.node.article.field_description
     - field.field.node.article.field_equipment
     - field.field.node.article.field_factboxes
-    - field.field.node.article.field_files
     - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
@@ -28,10 +29,6 @@ dependencies:
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
     - field.field.node.article.field_time
-    - field.field.node.article.lat
-    - field.field.node.article.layout_builder__layout
-    - field.field.node.article.lon
-    - field.field.node.article.sis_map_address_dawa
     - node.type.article
   module:
     - layout_builder
@@ -45,8 +42,8 @@ third_party_settings:
     allowed_block_categories: {  }
     entity_view_mode_restriction:
       allowed_layouts: {  }
-      denylisted_blocks: {  }
-      allowlisted_blocks: {  }
+      blacklisted_blocks: {  }
+      whitelisted_blocks: {  }
       restricted_categories: {  }
 _core:
   default_config_hash: MPH0xWosBjCbxPv7RhMaPznJBnPAJT06vK8GDR7H2AE
@@ -97,7 +94,9 @@ hidden:
   body: true
   content_hierarchy: true
   field_article_categories: true
+  field_article_image: true
   field_article_months: true
+  field_article_related: true
   field_article_type: true
   field_colophon: true
   field_colophon_author: true
@@ -105,7 +104,6 @@ hidden:
   field_colophon_photographer: true
   field_equipment: true
   field_factboxes: true
-  field_files: true
   field_graphics: true
   field_header: true
   field_list_date: true
@@ -115,9 +113,5 @@ hidden:
   field_teaching_goals: true
   field_time: true
   langcode: true
-  lat: true
-  layout_builder__layout: true
   links: true
-  lon: true
   search_api_excerpt: true
-  sis_map_address_dawa: true
