--- a/config/sync/migrate_plus.migration.upgrade_d7_file_to_media_audio.yml
+++ b/config/sync/migrate_plus.migration.upgrade_d7_file_to_media_audio.yml
@@ -1,30 +1,26 @@
-uuid: ba313f3a-9d25-4f45-9ede-27d8e10604d1
+uuid: eb87718b-f1e6-4478-9943-7acbddedebc5
 langcode: en
 status: true
 dependencies: {  }
-id: upgrade_d7_file_to_media_image
+id: upgrade_d7_file_to_media_audio
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: {  }
 migration_group: migrate
-label: 'Migrate Media image entities'
+label: 'Migrate eudio to media entities'
 source:
   plugin: d7_file_by_type
   scheme: public
   type:
-    - image/gif
-    - image/jpeg
-    - image/png
-    - image/tiff
-    - image/x-ms-bmp
+    - audio/mpeg
   get_alt: true
   get_title: true
   constants:
     source_base_path: 'https://www.skoven-i-skolen.dk'
   key: migrate
 process:
-  field_media_image/target_id:
+  field_media_audio_file/target_id:
     -
       plugin: migration_lookup
       migration: upgrade_d7_file
@@ -32,19 +28,13 @@ process:
     -
       plugin: skip_on_empty
       method: row
-  thumbnail/target_id:
-    plugin: migration_lookup
-    migration: upgrade_d7_file
-    source: fid
-  field_media_image/alt: alt
-  field_media_image/title: title
   status: status
   created: timestamp
   changed: timestamp
   uid: uid
 destination:
   plugin: 'entity:media'
-  default_bundle: image
+  default_bundle: audio
 migration_dependencies:
   required:
     - upgrade_d7_file
