--- a/config/sync/migrate_plus.migration.upgrade_d7_file_to_media_document.yml
+++ b/config/sync/migrate_plus.migration.upgrade_d7_file_to_media_document.yml
@@ -1,8 +1,8 @@
-uuid: ba313f3a-9d25-4f45-9ede-27d8e10604d1
+uuid: ed9ea335-20cf-4301-b145-4fc8f09f85d7
 langcode: en
 status: true
 dependencies: {  }
-id: upgrade_d7_file_to_media_image
+id: upgrade_d7_file_to_media_document
 class: null
 field_plugin_method: null
 cck_plugin_method: null
@@ -13,18 +13,19 @@ source:
   plugin: d7_file_by_type
   scheme: public
   type:
-    - image/gif
-    - image/jpeg
-    - image/png
-    - image/tiff
-    - image/x-ms-bmp
+    - application/xml
+    - application/vnd.openxmlformats-officedocument.wordprocessingml.document
+    - application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+    - application/vnd.ms-excel
+    - application/pdf
+    - application/msword
   get_alt: true
   get_title: true
   constants:
     source_base_path: 'https://www.skoven-i-skolen.dk'
   key: migrate
 process:
-  field_media_image/target_id:
+  field_media_document/target_id:
     -
       plugin: migration_lookup
       migration: upgrade_d7_file
@@ -32,19 +33,13 @@ process:
     -
       plugin: skip_on_empty
       method: row
-  thumbnail/target_id:
-    plugin: migration_lookup
-    migration: upgrade_d7_file
-    source: fid
-  field_media_image/alt: alt
-  field_media_image/title: title
   status: status
   created: timestamp
   changed: timestamp
   uid: uid
 destination:
   plugin: 'entity:media'
-  default_bundle: image
+  default_bundle: document
 migration_dependencies:
   required:
     - upgrade_d7_file
