SIS2-29: Moved slider-pager-count into it's own library

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -190,6 +190,12 @@ search-toggle:
   js:
     dist/components/js/search-toggle.js: {}
 
+slider-pager-count:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/slider-pager-count.css: {}
+
 overview-searchfield:
   version: VERSION
   css:
