--- a/config/sync/field.field.taxonomy_term.article_types.field_overview.yml
+++ b/config/sync/field.field.taxonomy_term.article_types.field_overview.yml
@@ -27,9 +27,10 @@ default_value:
       field_location: {  }
       field_season: {  }
       field_subject: {  }
+      text: ''
     count: 16
     sort: newest
-    pagination: false
+    pagination: true
     facets:
       - field_class
       - field_location
