--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.node.article.field_description
     - field.field.node.article.field_equipment
     - field.field.node.article.field_factboxes
+    - field.field.node.article.field_files
     - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
@@ -29,6 +30,9 @@ dependencies:
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
     - field.field.node.article.field_time
+    - field.field.node.article.lat
+    - field.field.node.article.lon
+    - field.field.node.article.sis_map_address_dawa
     - node.type.article
   module:
     - entity_reference_revisions
@@ -42,11 +46,8 @@ third_party_settings:
     allow_custom: false
   layout_builder_restrictions:
     allowed_block_categories:
-      - Block
-      - Bruger
       - 'Chaos Tools'
       - 'Content fields'
-      - Cookiebot
       - 'Custom block types'
       - Devel
       - Forms
@@ -55,15 +56,22 @@ third_party_settings:
       - 'Lists (Views)'
       - Menus
       - Premium
-      - Skoven-i-Skolen
       - System
+      - User
       - Webform
       - core
     entity_view_mode_restriction:
-      allowed_layouts: {  }
+      allowed_layouts:
+        - layout_onecol
+        - layout_twocol_section
+        - layout_threecol_section
+      restricted_categories:
+        - Devel
       blacklisted_blocks:
-        'Custom block types': {  }
-        'Inline blocks': {  }
+        'Custom block types':
+          - basic
+        'Inline blocks':
+          - 'inline_block:basic'
       whitelisted_blocks:
         'Chaos Tools': {  }
         'Content fields': {  }
@@ -73,14 +81,9 @@ third_party_settings:
         Menus: {  }
         Premium: {  }
         System: {  }
+        User: {  }
         Webform: {  }
         core: {  }
-      restricted_categories:
-        - Block
-        - Bruger
-        - Cookiebot
-        - Devel
-        - Skoven-i-Skolen
 _core:
   default_config_hash: 7OjcNSYQFZAAnCZrnyJg7utryjfmQoO33tkSTWehRNI
 id: node.article.full
@@ -93,7 +96,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 2
     region: content
   field_article_image:
     type: entity_reference_entity_view
@@ -128,6 +131,7 @@ hidden:
   field_description: true
   field_equipment: true
   field_factboxes: true
+  field_files: true
   field_graphics: true
   field_list_date: true
   field_list_media: true
@@ -138,6 +142,9 @@ hidden:
   field_teaching_goals: true
   field_time: true
   langcode: true
+  lat: true
   layout_builder__layout: true
   links: true
+  lon: true
   search_api_excerpt: true
+  sis_map_address_dawa: true
