--- a/config/sync/core.entity_view_display.node.article.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.article.slideshow.yml
@@ -1,9 +1,9 @@
-uuid: ebc1ab73-2b84-4d45-a4e7-6ef707ae1505
+uuid: a161072c-25bb-4a47-a6ee-6576c584abe9
 langcode: da
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.link_list
+    - core.entity_view_mode.node.slideshow
     - field.field.node.article.body
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
@@ -51,30 +51,55 @@ third_party_settings:
       whitelisted_blocks: {  }
 _core:
   default_config_hash: MPH0xWosBjCbxPv7RhMaPznJBnPAJT06vK8GDR7H2AE
-id: node.article.link_list
+id: node.article.slideshow
 targetEntityType: node
 bundle: article
-mode: link_list
+mode: slideshow
 content:
-  content_moderation_control:
+  field_article_image:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: full_width_16_9
+      link: false
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_class:
+    type: entity_reference_label
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 3
+    region: content
+  field_description:
+    type: basic_string
+    label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: -20
+    weight: 0
+    region: content
+  field_subject:
+    type: entity_reference_label
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   body: true
   content_hierarchy: true
+  content_moderation_control: true
   field_article_categories: true
-  field_article_image: true
   field_article_months: true
   field_article_related: true
   field_article_type: true
-  field_class: true
   field_colophon: true
   field_colophon_author: true
   field_colophon_editor: true
   field_colophon_photographer: true
-  field_description: true
   field_equipment: true
   field_factboxes: true
   field_files: true
@@ -85,7 +110,6 @@ hidden:
   field_location: true
   field_media_downloads: true
   field_season: true
-  field_subject: true
   field_teaching_goals: true
   field_time: true
   langcode: true
